--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,25 @@
   pointer-events: none;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* horizontal-offset vertical-offset blur spread color */
+  padding: 20px;
+  margin: 20px;
+}
+
+.card-header {
+  display: flex;
+}
+
+.card-header > :not(:first-child) {
+  margin-left: 220px; /* or use padding if you prefer */
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
