--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,10 @@
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* horizontal-offset vertical-offset blur spread color */
   padding: 20px;
-  margin: 20px;
+  margin: 30px;
+  /* Set margin top to 40 px important */
+  margin-top: 30px !important;
+  margin-left: 10px !important;
 }
 
 .card-header {
